[gd_scene load_steps=2 format=3 uid="uid://2w4m3qvk8tpe"]

[ext_resource type="Script" uid="uid://b4ik0uxcj2idy" path="res://Resources/Weapon/WeaponHUD.gd" id="1_weaponhud"]

[node name="WeaponHUD" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_weaponhud")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="PrimaryWeaponPanel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(75, 30)
layout_mode = 2

[node name="KeyLabel" type="Label" parent="HBoxContainer/PrimaryWeaponPanel"]
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 15.0
offset_bottom = 12.0
text = "1"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PrimaryWeaponPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -20.0
offset_right = 30.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PrimaryIcon" type="TextureRect" parent="HBoxContainer/PrimaryWeaponPanel/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="PrimaryLabel" type="Label" parent="HBoxContainer/PrimaryWeaponPanel/VBoxContainer"]
layout_mode = 2
text = "Primary"
horizontal_alignment = 1

[node name="SecondaryWeaponPanel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2

[node name="KeyLabel" type="Label" parent="HBoxContainer/SecondaryWeaponPanel"]
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 15.0
offset_bottom = 12.0
text = "2"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/SecondaryWeaponPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -20.0
offset_right = 30.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SecondaryIcon" type="TextureRect" parent="HBoxContainer/SecondaryWeaponPanel/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="SecondaryLabel" type="Label" parent="HBoxContainer/SecondaryWeaponPanel/VBoxContainer"]
layout_mode = 2
text = "Secondary"
horizontal_alignment = 1
